# plexm3u

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
src/: m3u.rs  main.rs  plex_client.rs
src/plex_client/: deserializer.rs  mod.rs  playlist.rs  plex_client.rs  track.rs
