[package]
name = "plexm3u"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
bytes = "1.10.1"
colog = "1.3.0"
clap = { version = "4.0", features = ["derive"] }
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
